# django-authx

./: .gitignore  LICENSE  README.md  pyproject.toml
django_authx/: __init__.py  admin.py  backends.py  middleware.py  routers.py  session_store.py  urls.py  validators.py
django_authx/admin/: __init__.py
django_authx/apis/: __init__.py  auth.py  base.py  session.py  user.py
django_authx/dependencies/: humanize.py
django_authx/fields/modelfields/: phonenumber.py
django_authx/forms/formfields/: __init__.py  phonenumber.py
django_authx/migrations/: 0001_initial.py  0002_remove_session_token_ttl_alter_session_refresh_token_and_more.py  0003_alter_session_options_and_more.py
django_authx/models/: __init__.py  auth.py  base.py  mfactor.py  oauth2.py  session.py
django_authx/models/modelfields/: encrypted_fields.py  mixins.py  phonenumber.py
django_authx/restapi/: routers.py
django_authx/restapi/serializers/: __init__.py  auth.py  session.py  user.py
django_authx/restapi/serializers/serializerfields/: phonenumber.py
django_authx/restapi/views/: __init__.py  auth.py  session.py  user.py
django_authx/serializers/: auth.py  base.py  user.py
django_authx/session/: __init__.py  middleware.py
django_authx/settings/: __init__.py  base.py
django_authx/utils/: __init__.py  phonenumber.py  tokens.py
example/configs/: asgi.py  settings.py  urls.py  wsgi.py
